# ai-excel-agent

./: .gitignore  README.md  employee_data.xlsx  extended_excel_test_data.xlsx  main.py  pyproject.toml  requirements.txt  sales_data.xlsx  test_commands.md
src/excel_agent/: __init__.py  agent.py  config.py  excel_handler.py  llm_interface.py  prompts.py  tools.py  utils.py
src/excel_agent/output/: __init__.py  abstract_output_handler.py  console_output_handler.py  gui_output_handler.py
src/gui/: app.py  main_window.py
src/gui/styles/: style.qss
